# srt_macro

./: .env  Dockerfile  README.md  api_server.py  macro_core.py  main.py  main_linux.py  main_mac.py  main_playwright.py  pyproject.toml  web_main.py
.github/workflows/: main.yml
legacy/: main.py  main_mac.py
