[project]
name = "srt-macro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "requests>=2.32.4",
    "selenium>=4.33.0",
    "webdriver-manager>=4.0.2",
    "playwright>=1.46.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.8.0",
    "python-multipart>=0.0.20",
]
